Manifests/Train-Service-Deployment/train-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: train-service
  template:
    metadata:
      labels:
        app: train-service
    spec:
      containers:
        - name: train-service
          image: minhaz71/railway-booking-train-service:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: train-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: train-service
  type: ClusterIP
